fix: improve CORS configuration by trimming allowed origins and updating docker-compose